# Competitive-Programming

./: .gitignore  ADifferentProblem.hs  AceArbiter.py  AlphabetSpam.py  AmalgatedArtichokes.hs  Apaxiaaaaaaaaaaaaans.hs  BatterUp.hs  Beekeeper.py  Buka.hs  Carrots.hs  CoffeeCupCombo.py  ColdputerScience.hs  DamsInDistress.java  DaydreamingStockbroker.py  DiceGame.py  DiskDistrict.hs  EchoEchoEcho.py  FYI.py  FiftyShadesOfPink.hs  FinalExam.hs  FizzBuzz.hs  FreeFood.hs  FrozenRose-Heads.py  GigCombinatorics.hs  GuessTheNumber.hs  HissingMicrophone.py  Howl.hs  Inflation.hs  LICENSE  LastFactorialDigit.java  LicenseToLaunch.hs  Marko.hs  MethodicMultiplication.hs  NarrowArtGallery.py  NumberFun.py  Oddities.py  Oktalni.hs  OpeningCeremony.py  Pet.hs  PokerHand.py  (+25 more)
Advent of Code/: Haskell.cabal
Advent of Code/2022/C++/: day1.cpp  day2.cpp
Advent of Code/2022/Haskell/: day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day2.hs  day21.hs  day23.hs  day24.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
Advent of Code/2022/inputs/: day10-input.txt  day11-input.txt  day12-input.txt  day13-input.txt  day14-input.txt  day15-input.txt  day16-input.txt  day18-input.txt  day2-input.txt  day21-input.txt  day23-input.txt  day4-input.txt  day5-input.txt  day6-input.txt  day7-input.txt  day8-input.txt  day9-input.txt
Advent of Code/2023/Haskell/: Haskell.cabal  day1.hs
Advent of Code/2023/Haskell/exe/: Main.hs
Advent of Code/2023/Haskell/inputs/: day1-input.txt  day3-input.txt
Advent of Code/2023/Haskell/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day2.hs  Day22.hs  Day23.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Meta.hs  Utils.hs
Advent of Code/2023/Haskell/src/Year/: Year2023.hs  Year2024.hs
Advent of Code/2023/Haskell/src/Year/Year2023/: Day1.hs  Day10.hs  Day13.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs
Advent of Code/2023/Haskell/src/Year/Year2024/: Day1.hs
Advent of Code/Haskell/: Haskell.cabal
Advent of Code/Haskell/exe/: Main.hs
Advent of Code/Haskell/src/: Meta.hs
Advent of Code/Haskell/src/Utility/: Misc.hs
Advent of Code/Haskell/src/Utility/Structure/: HashMap.hs  HashSet.hs
Advent of Code/Haskell/src/Year/: Year2023.hs  Year2024.hs
Advent of Code/Haskell/src/Year/Year2021/: day1.hs  day4.hs  day6.hs
Advent of Code/Haskell/src/Year/Year2022/: Day10.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day9.hs  day1.hs  day10.hs  day13.hs  day14.hs  day16.hs  day18.hs  day2.hs  day21.hs  day23.hs  day24.hs  day3.hs  day4.hs  day5.hs
Advent of Code/Haskell/src/Year/Year2023/: Day10.hs  Day12.hs  Day14.hs  Day17.hs  Day23.hs  Day24.hs  Day9.hs
Advent of Code/Haskell/src/Year/Year2024/: Day3.hs  Day5.hs
Advent of Code/Misc Solutions/Year2022/: Day1.cpp  Day2.cpp
Advent of Code/Misc Solutions/Year2023/: Day24.py  Day25.cpp
Advent of Code/Misc Solutions/Year2024/: Day12.cpp
Advent of Code/exe/: Main.hs
Advent of Code/inputs/test/year2023/: day1.txt
Advent of Code/src/: DayTemplate.hs  Meta.hs
Advent of Code/src/Utility/: Misc.hs
Advent of Code/src/Utility/Structure/: HashSet.hs  UF.hs
Advent of Code/src/Year/: Year2021.hs  Year2022.hs  Year2023.hs  Year2024.hs
Advent of Code/src/Year/Year2021/: Day1.hs  Day2.hs  day2.hs  day3.hs  day5.hs  day7.hs
Advent of Code/src/Year/Year2022/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  day15.hs  day16.hs  day17.hs
Advent of Code/src/Year/Year2023/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
Advent of Code/src/Year/Year2024/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs
AoC 2022/: day1.cpp  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day18.hs  day2.cpp  day2.hs  day21.hs  day23.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
CSES/: MissingNumber.hs  Permutations.hs  WeirdAlgorithm.hs
Codeforces/: 112A - Petya and Strings.hs  118A - String Task.hs  158A - Next Round.hs  1A - Theatre Square.hs  231A - Team.hs  236A - Boy or Girl.hs  263A - Beautiful Matrix.hs  266A - Stones on the Table.hs  281A - Word Capitalization.hs  282A - Bitt++.hs  339A - Helpful Maths.hs  4A - Watermelon.hs  50A - Domino Piling.hs  617A - Elephant.hs  71A - Way Too Long Words.hs  (+1 more)
(+2301 files in other folders)
