cabal-version:      3.4
name:               Haskell
version:            0.1.0.0
synopsis:           Haskell solutions to Advent of Code.
author:             Steinar
maintainer:         steinar.simonnes@gmail.com
build-type:         Simple

common warnings
    ghc-options: 
        -- -O3 
        -Wno-unused-do-bind 
        -Wno-incomplete-uni-patterns 
        -Wno-x-partial

library
    import:           warnings
    exposed-modules:
        Meta,
        Utility.Misc,
        Utility.Structure.UF,
        Utility.Structure.HashSet,
        Utility.Structure.HashMap,
        Year.Year2021,
        Year.Year2021.Day1,
        Year.Year2021.Day2,
        Year.Year2022,
        Year.Year2022.Day1,
        Year.Year2022.Day2,
        Year.Year2022.Day3,
        Year.Year2022.Day4,
        Year.Year2022.Day5,
        Year.Year2022.Day6,
        Year.Year2022.Day7,
        Year.Year2022.Day8,
        Year.Year2022.Day9,
        Year.Year2022.Day10,
        Year.Year2022.Day11,
        Year.Year2022.Day12,
        Year.Year2022.Day13,
        Year.Year2022.Day14,
        Year.Year2022.Day15,
        Year.Year2022.Day18,
        Year.Year2023,
        Year.Year2023.Day1,
        Year.Year2023.Day2,
        Year.Year2023.Day3,
        Year.Year2023.Day4,
        Year.Year2023.Day5,
        Year.Year2023.Day6,
        Year.Year2023.Day7,
        Year.Year2023.Day8,
        Year.Year2023.Day9,
        Year.Year2023.Day10,
        Year.Year2023.Day11,
        Year.Year2023.Day12,
        Year.Year2023.Day13,
        Year.Year2023.Day14,
        Year.Year2023.Day15,
        Year.Year2023.Day16,
        Year.Year2023.Day17,
        Year.Year2023.Day18,
        Year.Year2023.Day19,
        Year.Year2023.Day20,
        Year.Year2023.Day21,
        Year.Year2023.Day22,
        Year.Year2023.Day23,
        Year.Year2023.Day24,
        Year.Year2023.Day25,
        Year.Year2024,
        Year.Year2024.Day1,
        Year.Year2024.Day2,
        Year.Year2024.Day3,
        Year.Year2024.Day4,
        Year.Year2024.Day5,
        Year.Year2024.Day6,
        Year.Year2024.Day7,
        Year.Year2024.Day8
    default-extensions:
        BangPatterns,
        FunctionalDependencies,
        OverloadedStrings,
        TupleSections,
        StrictData
    build-depends: 
        base ^>=4.20.0.0,
        split,
        array,
        time,
        containers,
        text,
        queue,
        range,
        mtl,
        z3,
        random,
        bytestring,
        regex-tdfa,
        deepseq,
        union-find
    hs-source-dirs:   src
    default-language: GHC2021
    -- TODO repalce union-find
executable Haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        Haskell
    hs-source-dirs:   exe
    default-language: GHC2021
