cabal-version:      3.4
name:               Haskell
version:            0.1.0.0
synopsis:           Haskell solutions to Advent of Code.
author:             Steinar
maintainer:         steinar.simonnes@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -O3 -Wno-unused-do-bind -Wno-incomplete-uni-patterns

library
    import:           warnings
    exposed-modules:
        Meta,
        Utility.Misc,
        Utility.Structure.UF,
        Year.Year2023,
        Year.Year2023.Day1,
        Year.Year2023.Day2,
        Year.Year2023.Day3,
        Year.Year2023.Day4,
        Year.Year2023.Day5,
        Year.Year2023.Day6,
        Year.Year2023.Day7,
        Year.Year2023.Day8,
        Year.Year2023.Day9,
        Year.Year2023.Day10,
        Year.Year2023.Day11,
        Year.Year2023.Day12,
        Year.Year2023.Day13,
        Year.Year2023.Day14,
        Year.Year2023.Day15,
        Year.Year2023.Day16,
        Year.Year2023.Day17,
        Year.Year2023.Day18,
        Year.Year2023.Day19,
        Year.Year2023.Day20,
        Year.Year2023.Day21,
        Year.Year2023.Day22,
        Year.Year2023.Day23,
        Year.Year2023.Day24,
        Year.Year2023.Day25
    default-extensions:
        BangPatterns,
        FunctionalDependencies,
        OverloadedStrings
    build-depends: 
        base ^>=4.20.0.0,
        split,
        array,
        time,
        containers,
        text,
        queue,
        range,
        mtl,
        z3,
        random
    hs-source-dirs:   src
    default-language: GHC2021

executable Haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        Haskell
    hs-source-dirs:   exe
    default-language: GHC2021
